# src/TemplateV4.Angular/src/app/api/models.ts
@@ -20,6 +20,7 @@ export type { FileItem } from './models/file-item';
 export type { FilePage } from './models/file-page';
 export type { ForgotPasswordRequest } from './models/forgot-password-request';
 export type { InvitationItem } from './models/invitation-item';
+export type { InvitationPage } from './models/invitation-page';
 export type { InvitationRequest } from './models/invitation-request';
 export type { JsonElement } from './models/json-element';
 export type { LoginRequest } from './models/login-request';
@@ -35,7 +36,6 @@ export type { OperationsOverview } from './models/operations-overview';
 export type { PageOfAuditItem } from './models/page-of-audit-item';
 export type { PageOfDeletionItem } from './models/page-of-deletion-item';
 export type { PageOfFileItem } from './models/page-of-file-item';
-export type { PageOfInvitationItem } from './models/page-of-invitation-item';
 export type { PageOfNotificationItem } from './models/page-of-notification-item';
 export type { PageOfRoleItem } from './models/page-of-role-item';
 export type { PasskeyChallengeRequest } from './models/passkey-challenge-request';
