# src/TemplateV4.Angular/src/app/api/models/invitation-page.ts
@@ -2,9 +2,13 @@
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
 import { InvitationItem } from '../models/invitation-item';
-export interface PageOfInvitationItem {
+export interface InvitationPage {
+  accepted: number;
+  expired: number;
   items: Array<InvitationItem>;
   pageNumber: number;
   pageSize: number;
+  pending: number;
+  revoked: number;
   total: number;
 }
